compiler/lume_parser/src/snapshots/lume_parser__parser__tests__use_trait_snapshots@empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"use Add in Int32 {}\")"
---
[
    Use(
        UseTrait {
            name: Scalar(
                ScalarType {
                    name: "Add",
                    location: Location(
                        4..7,
                    ),
                },
            ),
            target: Scalar(
                ScalarType {
                    name: "Int32",
                    location: Location(
                        11..16,
                    ),
                },
            ),
            methods: [],
            location: Location(
                0..19,
            ),
        },
    ),
]
