compiler/lume_parser/src/snapshots/lume_parser__parser__tests__use_trait_snapshots@methods.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            use Cast in Int32 {\n                pub fn to_string() -> String {\n                    return self;\n                }\n\n                pub fn to_int() -> Int32 {\n                    return self;\n                }\n            }\"#)"
---
[
    Use(
        UseTrait {
            name: Scalar(
                ScalarType {
                    name: "Cast",
                    location: Location(
                        17..21,
                    ),
                },
            ),
            target: Scalar(
                ScalarType {
                    name: "Int32",
                    location: Location(
                        25..30,
                    ),
                },
            ),
            methods: [
                TraitMethodImplementation {
                    visibility: Public(
                        Public {
                            location: Location(
                                49..52,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "to_string",
                        location: Location(
                            56..65,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: "String",
                                location: Location(
                                    71..77,
                                ),
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "self",
                                                    location: Location(
                                                        107..111,
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        100..112,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            78..130,
                        ),
                    },
                    location: Location(
                        49..130,
                    ),
                },
                TraitMethodImplementation {
                    visibility: Public(
                        Public {
                            location: Location(
                                148..151,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "to_int",
                        location: Location(
                            155..161,
                        ),
                    },
                    parameters: [],
                    type_parameters: [],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: "Int32",
                                location: Location(
                                    167..172,
                                ),
                            },
                        ),
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "self",
                                                    location: Location(
                                                        202..206,
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        195..207,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            173..225,
                        ),
                    },
                    location: Location(
                        148..225,
                    ),
                },
            ],
            location: Location(
                13..239,
            ),
        },
    ),
]
