compiler/lume_parser/src/snapshots/lume_parser__parser__tests__use_trait_snapshots@priv_method.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(r#\"\n            use Add in Int32 {\n                fn add(other: Int32) -> Int32 {\n                    return self + other;\n                }\n            }\"#)"
---
[
    Use(
        UseTrait {
            name: Identifier {
                name: "Add",
                location: Location(
                    17..20,
                ),
            },
            target: Identifier {
                name: "Int32",
                location: Location(
                    24..29,
                ),
            },
            type_parameters: [],
            methods: [
                TraitMethodImplementation {
                    visibility: Private(
                        Private {
                            location: Location(
                                48..50,
                            ),
                        },
                    ),
                    name: Identifier {
                        name: "add",
                        location: Location(
                            51..54,
                        ),
                    },
                    parameters: [
                        Parameter {
                            name: Identifier {
                                name: "other",
                                location: Location(
                                    55..60,
                                ),
                            },
                            param_type: Scalar(
                                ScalarType {
                                    name: "Int32",
                                    location: Location(
                                        62..67,
                                    ),
                                },
                            ),
                            location: Location(
                                55..67,
                            ),
                        },
                    ],
                    type_parameters: [],
                    return_type: Scalar(
                        ScalarType {
                            name: "Int32",
                            location: Location(
                                72..77,
                            ),
                        },
                    ),
                    block: Block {
                        statements: [
                            Return(
                                Return {
                                    value: Some(
                                        Call(
                                            Call {
                                                callee: Some(
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "self",
                                                                location: Location(
                                                                    107..111,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ),
                                                name: Identifier {
                                                    name: "+",
                                                    location: Location(
                                                        112..113,
                                                    ),
                                                },
                                                arguments: [
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "other",
                                                                location: Location(
                                                                    114..119,
                                                                ),
                                                            },
                                                        },
                                                    ),
                                                ],
                                                type_parameters: [],
                                                location: Location(
                                                    107..114,
                                                ),
                                            },
                                        ),
                                    ),
                                    location: Location(
                                        100..120,
                                    ),
                                },
                            ),
                        ],
                        location: Location(
                            78..138,
                        ),
                    },
                    location: Location(
                        48..138,
                    ),
                },
            ],
            location: Location(
                13..152,
            ),
        },
    ),
]
